# swig_vector

./: meson.build  swig_vector.cpp  swig_vector.h  swig_vector.i  test_vector.py
python2/: meson.build
python3/: meson.build
